added landing page details

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <html>
+<style>
+  body{
+    font-size: 3em;
+    margin: 1em;
+  }
+  a{
+    text-decoration: none;
+  }
+  h1{
+    font-family: Helvetica;
+  }
+  ul{
+    list-style-type: none;
+  }
+</style>
 <body>
+  <h1> Introduction to SVG </h1>
+  <small> By Victor Powell / @vicapow </small>
   <ul>
     <li><a href="svg-helloworld.html">hello svg!</a></li>
     <li><a href="svg-in-yo-browser.html">svg in yo browser</a></li>
     <li><a href="svg-and-d3.html">svg and d3</a></li>
     <li><a href="svg-hell-computer-p1.html">hello computer, part I</a></li>
     <li><a href="svg-hell-computer-p2.html">hello computer, part II</a></li>
-    <li><a href="http://setosa.io/art/swirl/">a larger, simple example</a></li>
   </ul>
 </body>
 </html>
