--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <li><a href="svg-helloworld.html">hello svg!</a></li>
     <li><a href="svg-in-yo-browser.html">svg in yo browser</a></li>
     <li><a href="svg-and-d3.html">svg and d3</a></li>
-    <li><a href="svg-hell-computer-p1.html">hello computer, part I</a></li>
-    <li><a href="svg-hell-computer-p2.html">hello computer, part II</a></li>
+    <li><a href="svg-hello-computer-p1.html">hello computer, part I</a></li>
+    <li><a href="svg-hello-computer-p2.html">hello computer, part II</a></li>
+    <li><a href="http://setosa.io/art/swirl/">a larger, simple example</a></li>
   </ul>
 </body>
 </html>
