--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <html>
 <style>
-  body{
-    font-size: 3em;
-    margin: 1em;
-  }
-  a{
-    text-decoration: none;
-  }
-  h1{
-    font-family: Helvetica;
-  }
-  ul{
-    list-style-type: none;
-  }
+  /* make the page look nice. */
+  body{ font-size: 3em; margin: 1em; }
+  a{ text-decoration: none; }
+  h1{ font-family: Helvetica; }
+  ul{ list-style-type: none; }
 </style>
 <body>
   <h1> Introduction to SVG </h1>
