--- a/svg-hello-computer-p2.html
+++ b/svg-hello-computer-p2.html
@@ -44,10 +44,9 @@ function talk(){
   open_close_mouth()
   // periodically, blink
   if(Math.random() > .9) blink()
+  // rinse and repeat!
   setTimeout(talk, Math.random() * 200 + 100)
 }
-
-talk()
 
     </script>
   </body>
