--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style>
 <body>
   <h1> Introduction to SVG </h1>
-  <small> By Victor Powell / @vicapow </small>
+  <small> By Victor Powell / <a href="http://twitter.com/vicapow">@vicapow</a></small>
   <ul>
     <li><a href="svg-helloworld.html">hello svg!</a></li>
     <li><a href="svg-in-yo-browser.html">svg in yo browser</a></li>
